removed jpg extensions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Genny Allison | Front-End Developer, AI Content & SEO Specialist" />
     <meta property="og:description" content="Explore the digital portfolio of Genny Allison, a front-end developer crafting responsive, SEO-optimized websites with AI-driven content and modern UI/UX design." />
     <meta property="og:url" content="https://gennyallison.netlify.app/" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1741120266/headshot-nobackground_oet0ut.png" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1741120266/headshot-nobackground_oet0ut" />
     <meta property="og:image:alt" content="Genny Allison — AI Content Creator & Front-End Developer Headshot" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
 
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Genny Allison | Front-End Developer, AI Content & SEO Specialist" />
     <meta name="twitter:description" content="Genny builds lightning-fast, SEO-optimized websites using HTML, CSS, and AI tools. Check out her latest UI/UX and performance-driven projects." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1741120266/headshot-nobackground_oet0ut.png" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1741120266/headshot-nobackground_oet0ut" />
     <meta name="twitter:image:alt" content="Professional Headshot of Genny Allison for Portfolio Preview" />
     <meta name="twitter:site" content="@allis78978" />
     <meta name="twitter:creator" content="@allis78978" />
