--- a/pages/about.html
+++ b/pages/about.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="About Genny Allison | AI Content Creator & SEO Specialist" />
     <meta property="og:description" content="Meet Genny Allison — an AI-powered content creator, SEO specialist, and front-end developer. Explore her journey, skills, and projects." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/about.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749314349/genny-about-portrait_qu2vcz.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749314349/genny-about-portrait_qu2vcz" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Portrait of Genny Allison, AI content and SEO specialist" />
@@ -21,7 +21,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="About Genny Allison | AI Content Creator & SEO Specialist" />
     <meta name="twitter:description" content="Explore Genny's story as an AI-powered content creator and front-end developer focused on high-performance, SEO-optimized websites." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749314349/genny-about-portrait_qu2vcz.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749314349/genny-about-portrait_qu2vcz" />
     <meta name="twitter:image:alt" content="Portrait of Genny Allison, AI content and SEO specialist" />
 
 
