--- a/pages/collections.html
+++ b/pages/collections.html
@@ -16,14 +16,14 @@
     <meta property="og:title" content="Genny Allison | My Work | AI-Powered SEO Projects & Web Development Portfolio" />
     <meta property="og:description" content="Explore Genny Allison’s portfolio showcasing AI-driven content, Core Web Vitals optimization, and accessible, high-performing web design. Each project blends creativity, code, and strategy." />
     <meta property="og:url" content="https://tech-trends-blog.netlify.app/pages/collections.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1743092340/collections_ky7hd1.avif" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1743092340/collections_ky7hd1" />
     <meta property="og:image:alt" content="A woman coding on a laptop representing innovation and creativity in Genny Allison’s digital portfolio" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Genny Allison | Web Developer Portfolio | SEO, AI Content & UI/UX Projects" />
     <meta name="twitter:description" content="Browse Genny Allison’s digital creations—from AI blogs to JavaScript animations. Designed for speed, SEO, accessibility, and beautiful user experience." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1743092340/collections_ky7hd1.avif" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1743092340/collections_ky7hd1" />
     <meta name="twitter:image:alt" content="Hero image for the My Work page in Genny Allison’s portfolio" />
     <meta name="twitter:site" content="@allis78978" />
 
@@ -162,6 +162,26 @@
             "image": "https://res.cloudinary.com/dnptzisuf/image/upload/v1743017418/project6-thumbnail_ws3h0z.avif",
             "description": "JavaScript animation of Mario & Luigi racing. Features custom graphics, smooth transitions, and pure front-end logic."
           }
+        ]
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/collections"
+          },
         ]
       }
     </script>
