--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,14 +12,14 @@
     <meta property="og:title" content="Contact Genny Allison | Front-End Developer at Allison Stock Inc.">
     <meta property="og:description" content="Connect with Genny Allison, a front-end developer specializing in UI/UX, SEO, and high-performance websites. Reach out via email or download her resume.">
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/contact.html">
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1746550266/allisonstock-logo_xgohg9.avif">
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1746550266/allisonstock-logo_xgohg9">
     <meta property="og:site_name" content="Genny Allison | Portfolio">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Contact Genny Allison | Front-End Developer">
     <meta name="twitter:description" content="Explore Genny Allison's front-end development work and connect with her for collaborations in UI/UX, SEO, and responsive design.">
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1746550266/allisonstock-logo_xgohg9.avif">
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1746550266/allisonstock-logo_xgohg9">
     <meta name="twitter:site" content="@allis78978">
 
     <!-- Desktop ≥ 941px -->
