--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Project 1: Tech Trends | AI Content & SEO Portfolio Project by Genny Allison" />
     <meta property="og:description" content="Explore how Genny Allison applied AI content creation, SEO optimization, and Core Web Vitals techniques to build the Tech Trends project — a standout in her front-end and AI content portfolio." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project1/project1-intro" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
 
     <meta name="description" content="Dive into Tech Trends Blog, a performance-optimized project by Genny Allison showcasing AI content creation, SEO strategy, and responsive web design. Explore how creativity and cutting-edge tools like ChatGPT and Midjourney power a modern, accessible blog experience.">
