--- a/pages/project1/project1-the-casestudy.html
+++ b/pages/project1/project1-the-casestudy.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Tech Trends Project Case Study | Genny Allison" />
     <meta property="og:description" content="Explore Genny Allison’s Tech Trends Project—an AI-powered case study featuring SEO-optimized content, responsive design, and lightning-fast performance." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project1/project1-the-casestudy" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet" />
     <meta property="og:image:alt" content="Tech Trends Project Case Study by Genny Allison – Responsive design, SEO optimization, and AI-powered content" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
 
@@ -17,7 +17,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Tech Trends Project Case Study | Genny Allison" />
     <meta name="twitter:description" content="AI-powered web project case study by Genny Allison. Learn how she created SEO-optimized, high-performance content with responsive design." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet" />
     <meta name="twitter:image:alt" content="Genny Allison's AI Content & SEO Case Study" />
 
     <meta name="description" content="Explore Genny Allison’s Tech Trends Project—an AI-powered case study featuring SEO-optimized content, responsive design, and lightning-fast performance.">
