--- a/pages/project1/project1-the-design.html
+++ b/pages/project1/project1-the-design.html
@@ -9,14 +9,14 @@
     <meta property="og:title" content="Tech Trends Project – The Design | UI/UX & Performance Strategy by Genny Allison" />
     <meta property="og:description" content="Explore the design breakdown of the Tech Trends Project by Genny Allison. Discover how UI/UX principles, accessibility, and visual strategy shaped this AI-powered portfolio site." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project1/project1-the-design" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet" />
     <meta property="og:image:alt" content="Tech Trends Design Overview by Genny Allison" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Tech Trends Project – The Design | Genny Allison" />
     <meta name="twitter:description" content="See how Genny Allison applied UI/UX design, responsive layout, and performance strategy to build a high-speed, accessible portfolio project." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet" />
     <meta name="twitter:image:alt" content="Design-focused case study from the Tech Trends portfolio project by Genny Allison" />
     <meta name="twitter:site" content="@GennyAllison" />
     <meta name="twitter:creator" content="@GennyAllison" />
