--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -9,14 +9,14 @@
     <meta property="og:title" content="Tech Trends Project – The Grade | 100/100 PageSpeed Score Breakdown by Genny Allison" />
     <meta property="og:description" content="Discover how Genny Allison achieved a perfect 100/100 PageSpeed Insights score on her Tech Trends Project using SEO best practices, performance tuning, and WCAG design principles." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project1/project1-the-grade" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet" />
     <meta property="og:image:alt" content="Tech Trends Grade Page by Genny Allison showing performance and SEO achievements" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Tech Trends Project – The Grade | 100/100 PageSpeed SEO Case Study" />
     <meta name="twitter:description" content="Genny Allison explains how she optimized the Tech Trends Project for top PageSpeed Insights and SEO scores through AI content, LCP, CLS, and Core Web Vitals tuning." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet" />
     <meta name="twitter:image:alt" content="Portfolio Case Study: 100 PageSpeed Score – Tech Trends by Genny Allison" />
     <meta name="twitter:site" content="@GennyAllison" />
     <meta name="twitter:creator" content="@GennyAllison" />
