--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Sports Tube Video Blog Project | AI Content & SEO Portfolio by Genny Allison" />
     <meta property="og:description" content="Explore the Sports Tube Video Blog Project by Genny Allison—an AI-powered portfolio project showcasing SEO-optimized content, responsive design, and a perfect 100 PageSpeed score." />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1748537741/sports-tube-desktop_c9qmdx.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1748537741/sports-tube-desktop_c9qmdx" />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project2/project2-intro" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
 
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Sports Tube Video Blog Project | AI Content & SEO Portfolio by Genny Allison" />
     <meta name="twitter:description" content="Explore this AI-powered case study featuring SEO content, web performance, and responsive UI/UX design by Genny Allison." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1748537741/sports-tube-desktop_c9qmdx.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1748537741/sports-tube-desktop_c9qmdx" />
     <meta name="twitter:site" content="@GennyAllison" />
     <meta name="twitter:creator" content="@GennyAllison" />
 
