--- a/pages/project2/project2-the-casestudy.html
+++ b/pages/project2/project2-the-casestudy.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Sports Tube Video Blog Project Case Study | Genny Allison" />
     <meta property="og:description" content="Explore how Genny Allison used AI content tools and SEO strategy to achieve a 100/100 PageSpeed score for this sports blog platform." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project2/project2-the-casestudy" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748537741/sports-tube-desktop_c9qmdx.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748537741/sports-tube-desktop_c9qmdx" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Sports Tube Video Blog Project Case Study | Genny Allison" />
     <meta name="twitter:description" content="Explore how AI-powered content and SEO transformed a sports blog into a high-performance site with perfect PageSpeed scores." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748537741/sports-tube-desktop_c9qmdx.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748537741/sports-tube-desktop_c9qmdx" />
     <meta name="twitter:creator" content="@allis78978" />
 
 
