--- a/pages/project2/project2-the-design.html
+++ b/pages/project2/project2-the-design.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Sports Tube Video Blog Design | AI Content & SEO Portfolio | Genny Allison" />
     <meta property="og:description" content="Explore the design and wireframe of the Sports Tube Video Blog by AI Content Creator & SEO Specialist Genny Allison. This page highlights responsive layout, AI-generated visuals, and SEO-optimized UI for high-performing, fast-loading websites." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project2/project2-the-design.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Sports Tube Video Blog Design | AI Content & SEO Portfolio | Genny Allison" />
     <meta name="twitter:description" content="Explore the design and wireframe of the Sports Tube Video Blog by AI Content Creator & SEO Specialist Genny Allison. This page highlights responsive layout, AI-generated visuals, and SEO-optimized UI for high-performing, fast-loading websites." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y" />
     <meta name="twitter:creator" content="@allis78978" />
 
 
