--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Sports Tube Video Blog – The Grade | AI Content & SEO Portfolio | Genny Allison" />
     <meta property="og:description" content="Discover how Genny Allison achieved a perfect 100/100 Google PageSpeed Insights score using AI-generated content and SEO optimization strategies in the Sports Tube Video Blog project." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project2/project2-the-grade" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748537741/sports-tube-desktop-score.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748537741/sports-tube-desktop-score" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Sports Tube Video Blog – The Grade | AI Content & SEO Portfolio | Genny Allison" />
     <meta name="twitter:description" content="See how Genny Allison used AI and SEO to earn a perfect 100/100 PageSpeed score for the Sports Tube project." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748537741/sports-tube-desktop-score.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748537741/sports-tube-desktop-score" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
