--- a/pages/project3/project3-the-casestudy.html
+++ b/pages/project3/project3-the-casestudy.html
@@ -9,14 +9,14 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Tech Trends Project Case Study | Genny Allison | AI Content & SEO Portfolio" />
     <meta property="og:description" content="Discover how Genny Allison used AI content creation and SEO strategies to build a responsive, fast-loading sports blog. Explore Core Web Vitals, PageSpeed optimization, and accessible design in this case study." />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y" />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project3/project3-the-casestudy" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Tech Trends Project Case Study | AI Content & SEO Portfolio" />
     <meta name="twitter:description" content="Genny Allison’s portfolio case study on building a high-performance, AI-powered, SEO-optimized sports blog with perfect PageSpeed Insights scores." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y" />
     <meta name="twitter:site" content="@GennyAllison" />
     <meta name="twitter:creator" content="@GennyAllison" />
 
