--- a/pages/project3/project3-the-grade.html
+++ b/pages/project3/project3-the-grade.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Sports Tube Community Project – The Grade | Genny Allison Portfolio" />
     <meta property="og:description" content="See how Genny Allison achieved a perfect 100/100 Google PageSpeed Insights score using AI content, SEO strategy, and Core Web Vitals optimization." />
     <meta property="og:url" content="https://sports-tube-community.netlify.app/pages/project3/project3-the-grade.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748887777/sports-tube-community-hero-desktop_m0ri3y" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
@@ -21,7 +21,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Sports Tube Community Project – The Grade | Genny Allison Portfolio" />
     <meta name="twitter:description" content="Discover how the Sports Tube Community project earned a perfect 100/100 PageSpeed score through AI content creation and SEO performance." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748887777/sports-tube-community-hero-desktop_m0ri3y" />
     <meta name="twitter:creator" content="@allis78978" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
