--- a/pages/project4/project4-intro.html
+++ b/pages/project4/project4-intro.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Texas Remodelers WordPress Project | AI Content & SEO Portfolio by Genny Allison" />
     <meta property="og:description" content="Explore the Texas Remodelers WordPress project created by AI Content Creator & SEO Specialist Genny Allison. Featuring AI-generated content, SEO optimization, responsive design, and Core Web Vitals improvements." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project4/project4-intro.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/texas-remodelers-hero-desktop_auvn6l.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/texas-remodelers-hero-desktop_auvn6l" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="780" />
 
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Texas Remodelers WordPress Project | AI Content & SEO Portfolio by Genny Allison" />
     <meta name="twitter:description" content="This WordPress project showcases AI content, responsive design, and PageSpeed optimization by Genny Allison." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/texas-remodelers-hero-desktop_auvn6l.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/texas-remodelers-hero-desktop_auvn6l" />
     <meta name="twitter:url" content="https://gennyallison.netlify.app/pages/project4/project4-intro.html" />
 
 
