--- a/pages/project4/project4-the-casestudy.html
+++ b/pages/project4/project4-the-casestudy.html
@@ -10,14 +10,14 @@
     <meta property="og:title" content="Texas Remodelers Project Case Study | AI Content & SEO Portfolio | Genny Allison" />
     <meta property="og:description" content="Explore how Genny Allison used AI tools, SEO strategy, and WordPress recovery techniques to build a fast, optimized remodeling website. This portfolio case study showcases her web performance and content skills." />
     <meta property="og:url" content="https://texas-remodelers-sample.netlify.app/pages/project4/project4-the-casestudy.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630/v1749150451/texas-remodelers-hero-desktop_auvn6l" />
     <meta property="og:image:alt" content="Screenshot of the Texas Remodelers case study page showing a WordPress-based remodeling project with AI-powered enhancements." />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Texas Remodelers Case Study | AI SEO Portfolio | Genny Allison" />
     <meta name="twitter:description" content="Case study: How Genny Allison optimized a remodeling website using WordPress, AI-generated content, and SEO best practices." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630/v1749150451/texas-remodelers-hero-desktop_auvn6l" />
     <meta name="twitter:image:alt" content="Texas Remodelers Case Study preview image from Genny Allison's portfolio." />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
