--- a/pages/project4/project4-the-design.html
+++ b/pages/project4/project4-the-design.html
@@ -11,13 +11,13 @@
     <meta property="og:title" content="Texas Remodelers Project | The Design | AI Content & SEO Portfolio by Genny Allison">
     <meta property="og:description" content="Explore the design process behind the Texas Remodelers WordPress project. See how AI content, responsive layout, and SEO strategy come together in this high-performance portfolio piece.">
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project4/project4-the-design.html">
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg">
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Texas Remodelers Project | The Design | AI Content & SEO Portfolio by Genny Allison">
     <meta name="twitter:description" content="Explore the design process of the Texas Remodelers project — a fast, AI-powered, SEO-optimized WordPress site designed by Genny Allison.">
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg">
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l">
     <meta name="twitter:url" content="https://gennyallison.netlify.app/pages/project4/project4-the-design.html">
 
 
