--- a/pages/project4/project4-the-grade.html
+++ b/pages/project4/project4-the-grade.html
@@ -3,16 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Texas Remodelers Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
-
     <meta name="description" content="Genny Allison's AI Content Creator & SEO Specialist portfolio project showcases how she achieved a 100/100 PageSpeed Insights score through Core Web Vitals optimization, performance-driven design, and AI-powered image and content enhancements.">
-
+    <title>Texas Remodelers Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
     <!-- Open Graph Meta Tags -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Texas Remodelers Project | The Grade | Genny Allison Portfolio" />
     <meta property="og:description" content="Explore how Genny Allison achieved a perfect 100/100 PageSpeed Insights score with the Texas Remodelers project using AI content, SEO optimization, and Core Web Vitals performance." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project4/project4-the-grade.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
@@ -21,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Texas Remodelers Project | The Grade | Genny Allison Portfolio" />
     <meta name="twitter:description" content="See how Genny Allison used AI tools and SEO techniques to optimize Core Web Vitals and achieve a perfect PageSpeed score for this WordPress project." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l" />
     <meta name="twitter:site" content="@allis78978" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
