--- a/pages/project5/project5-the-design.html
+++ b/pages/project5/project5-the-design.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Parent Tech Support Redesign | WordPress & Elementor Client Project" />
     <meta property="og:description" content="Explore Genny Allison’s UI/UX-focused redesign of the Parent Tech Support site using WordPress and Elementor. Featuring responsive layout improvements, newsletter integration, and optimized article/video blog structure." />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749668000/parent-tech-support-hero-desktop.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749668000/parent-tech-support-hero-desktop" />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project5/project5-the-design.html" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
 
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Parent Tech Support Redesign | WordPress & Elementor Client Project" />
     <meta name="twitter:description" content="See how Genny Allison improved the layout and responsiveness of the Parent Tech Support WordPress site using Elementor. Featuring blog optimization and UI/UX enhancements." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749668000/parent-tech-support-hero-desktop.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749668000/parent-tech-support-hero-desktop" />
     <meta name="twitter:site" content="@GennyAllison" />
     <meta name="twitter:creator" content="@GennyAllison" />
 
