--- a/pages/project6/project6-the-design.html
+++ b/pages/project6/project6-the-design.html
@@ -10,13 +10,13 @@
     <meta property="og:title" content="Mario Race Animation | HTML CSS JavaScript Animation | Genny Allison" />
     <meta property="og:description" content="Mario Race is a UI/UX animation project created by Genny Allison using HTML, CSS, and JavaScript. Explore how animation, accessibility, and clean coding practices come together in this interactive piece." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project6/project6-the-design.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1749360000/mario-race-hero.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1749360000/mario-race-hero" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Mario Race Animation | HTML CSS JavaScript Animation | Genny Allison" />
     <meta name="twitter:description" content="Mario Race is a UI/UX animation project created by Genny Allison using HTML, CSS, and JavaScript. Explore how animation, accessibility, and clean coding practices come together in this interactive piece." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1749360000/mario-race-hero.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1749360000/mario-race-hero" />
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
