--- a/pages/resume.html
+++ b/pages/resume.html
@@ -16,14 +16,14 @@
     <meta property="og:title" content="Genny Allison | Resume | Front End Developer & SEO Content Specialist" />
     <meta property="og:description" content="Explore Genny Allison’s professional resume, blending web development, UI/UX design, and AI-powered SEO content creation. Discover her career achievements and certifications." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/resume.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749313527/girl-painting-resized_hotizy.avif" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749313527/girl-painting-resized_hotizy" />
     <meta property="og:image:alt" content="Resume hero image showcasing Genny Allison’s creative and technical capabilities" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Genny Allison | Resume | Front End Developer & SEO Content Specialist" />
     <meta name="twitter:description" content="See Genny Allison’s experience as a Front End Developer, AI content creator, and SEO strategist. Review her certifications and digital accomplishments." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749313527/girl-painting-resized_hotizy.avif" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749313527/girl-painting-resized_hotizy" />
     <meta name="twitter:image:alt" content="Genny Allison portfolio resume preview" />
     <meta name="twitter:site" content="@allis78978" />
 
