--- a/pages/skills.html
+++ b/pages/skills.html
@@ -13,14 +13,14 @@
     <meta property="og:title" content="Genny Allison | Skills Portfolio | Front End Developer & AI Content Specialist" />
     <meta property="og:description" content="Explore Genny Allison's skills in web development, SEO, AI content, responsive design, and UI/UX. This skills portfolio highlights a blend of technical expertise and creative tools like MidJourney, Figma, and Photoshop." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/skills.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749311652/girl-learning_uylv0k.avif" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749311652/girl-learning_uylv0k" />
     <meta property="og:image:alt" content="Skills hero image representing Genny Allison’s technical and creative capabilities in AI content, design, and front-end development." />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Genny Allison | Skills Portfolio | Front End Developer & AI Content Specialist" />
     <meta name="twitter:description" content="A showcase of Genny Allison’s technical skills and AI expertise across web development, SEO, content generation, and responsive UI/UX design." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749311652/girl-learning_uylv0k.avif" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749311652/girl-learning_uylv0k" />
     <meta name="twitter:image:alt" content="Skills grid banner with AI and design tools featured" />
     <meta name="twitter:site" content="@allis78978" />
 
