--- a/pages/project3/project3-intro.html
+++ b/pages/project3/project3-intro.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Sports Tube Community Blog Project | AI Content & SEO Portfolio by Genny Allison" />
     <meta property="og:description" content="Explore the Sports Tube Community Blog Project by Genny Allison—an AI-powered, SEO-optimized blog platform with PageSpeed 100/100 and user-submitted content." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project3/project3-intro" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Sports Tube Community Blog Project | AI Content & SEO Portfolio by Genny Allison" />
     <meta name="twitter:description" content="AI-driven, SEO-optimized blog platform built by Genny Allison. Discover case studies, wireframes, and performance insights." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y" />
 
 
     <!-- Desktop ≥ 941px -->
