--- a/pages/project3/project3-the-design.html
+++ b/pages/project3/project3-the-design.html
@@ -12,14 +12,14 @@
     <meta property="og:title" content="Sports Tube Community Project | The Design | Genny Allison Portfolio" />
     <meta property="og:description" content="Discover the design behind the Sports Tube Community Project, featuring responsive layout, AI content, and SEO-optimized visuals by Genny Allison." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project3/project3-the-design.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1748887777/sports-tube-community-hero-desktop_m0ri3y" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Sports Tube Community Project | The Design" />
     <meta name="twitter:description" content="See how Genny Allison designed a high-performance, AI-powered sports blog with SEO and responsiveness in mind." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1748887777/sports-tube-community-hero-desktop_m0ri3y" />
     <meta name="twitter:site" content="@GennyAllison" />
     <meta name="twitter:creator" content="@GennyAllison" />
 
